--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <th>Average buy price</th>
           <th>Amount</th>
           <th>Total invested ($)</th>
+          <th></th>
         </tr>
       </thead>
 
@@ -50,7 +51,7 @@
       <div class="modal-content">
         <span class="close" id="transaction-modal-close">&times;</span>
         <div class="inner-modal-content" id="inner-transaction-modal-content">
-          <h2 id="transactionModalTitle"></h2>
+          <h2>New transaction for <span id="transactionModalTitle"></span></h2>
           <form id="transactionForm">
             <input id="transactionDate" type="date">
             <input id="transactionAmount" type="number" step="any" placeholder="Amount bought">
