--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
 
 
     <script type="module" src="/src/main.ts"></script>
-    <script type="module" src="/src/charts/PieChart.ts"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 </body>
 
 </html>
