Add linechart of total value over time
-Includes the datasets of each coin being held
-default to last 100 days 
-defaults to daily
-defaults to dollar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       </tbody>
     </table>
 
+    <div class="chart mainChart lineChart">
+      <h2>Total value over time</h2>
+      <canvas id="lineChart1"></canvas>
+    </div>
+
     <div class="charts">
       <div class="chart pieChart">
         <h2>Total invested</h2>
