Add dollar signs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <th>Asset</th>
           <th>Average buy price</th>
           <th>Amount</th>
-          <th>Total invested ($)</th>
+          <th>Total invested</th>
           <th></th>
         </tr>
       </thead>
