Implement summary values of totalValue and totalPercentage

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
       <div class="summary">
         <h3>Total value</h3>
-        <p>$100</p>
+        <span id="summaryTotalValue">----</span>
         <h3>Total gain</h3>
-        <p>+10%</p>
+        <span id="summaryTotalPercentage">----</span>
       </div>
     </div>
 
