Add chart colors and improve default summary
-Added a purple gradient for the main total value line chart
-Changed the summary preview for empty portfolio
-Bugfix net invested

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
       <div class="summary">
         <h3>Total value</h3>
-        <span id="summaryTotalValue">----</span>
+        <span style="opacity: 0.1;" id="summaryTotalValue">$</span>
         <h3>Total gain</h3>
-        <span id="summaryTotalPercentage">----</span>
+        <span style="opacity: 0.1;" id="summaryTotalPercentage">%</span>
       </div>
     </div>
 
