--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="assetsTable">
         <h2 id="assetsTableTitle">My assets</h2>
-        <button id="addCrypto">Add new crypto</button>
+        <button id="addCrypto">Add crypto</button>
         <table class="table" id="assetsTable">
           <thead>
             <tr>
@@ -25,7 +25,8 @@
               <th>Average buy price</th>
               <th>Amount</th>
               <th>Total invested</th>
-              <th>Options</th>
+              <th>Current Value</th>
+              <th>Gain</th>
             </tr>
           </thead>
           <tbody id="assetsTableBody">
@@ -35,9 +36,9 @@
 
       <div class="summary">
         <h3>Total value</h3>
-        <span style="opacity: 0.1;" id="summaryTotalValue">$</span>
+        <span id="summaryTotalValue">$</span>
         <h3>Total gain</h3>
-        <span style="opacity: 0.1;" id="summaryTotalPercentage">%</span>
+        <span id="summaryTotalPercentage">%</span>
       </div>
     </div>
 
