Use the same colors for cryptos on all charts
-Added the color property to the cryptocurrency class so it can be accessed when building charts to have consistent colors

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cryptofolio</title>
   <link rel="stylesheet" href="./src/style.css">
@@ -17,12 +17,7 @@
     <div class="row">
       <div class="assetsTable">
         <h2 id="assetsTableTitle">My assets</h2>
-        <div class="summary">
-          <h3>Total value</h3>
-          <span id="summaryTotalValue">$</span>
-          <h3>Total gain</h3>
-          <span id="summaryTotalPercentage">%</span>
-        </div>
+
         <button id="addCrypto">Add crypto</button>
         <table class="table" id="assetsTable">
           <thead>
@@ -39,8 +34,17 @@
           </tbody>
         </table>
       </div>
+    </div>
+    <div class="row">
+      <div class="summary">
+        <h3>Total value</h3>
+        <span id="summaryTotalValue">$</span>
+        <h3>Total gain</h3>
+        <span id="summaryTotalPercentage">%</span>
+        <h3>24h gain</h3>
+        <span id="summaryTotalPercentage">%</span>
       </div>
-
+    </div>
 
 
 
