Add import/export for the data
Allows to import or export/download the data in JSON format

--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
         <span id="summaryTotalValue">$</span>
         <h3>Total gain</h3>
         <span id="summaryTotalPercentage">%</span>
-        <h3>24h gain</h3>
-        <span id="summaryTotalPercentage">%</span>
+        <a id="exportDataBtn">Export data</a>
+        <div>
+          <input type="file" accept=".json" id="importDataBtn" placeholder="Import data">
+          <label id="fileInputLabel" for="importDataBtn"><a>Import data</a></label>
+        </div>
       </div>
     </div>
 
