Support Staked ETH LSDs like rETH, wstETH and show total rewards
-This functionality will check if there are any LSD coins held and calculate the rewards if they are present

--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@
         <h3>Total gain</h3>
         <span id="summaryTotalPercentage">%</span>
         <a id="exportDataBtn">Export data</a>
-        <div>
-          <input type="file" accept=".json" id="importDataBtn" placeholder="Import data">
-          <label id="fileInputLabel" for="importDataBtn"><a>Import data</a></label>
+        <input type="file" accept=".json" id="importDataBtn" placeholder="Import data">
+        <label id="fileInputLabel" for="importDataBtn"><a>Import data</a></label>
+      </div>
+
+      <div id="ethereumStaking">
+        <div><span id="ethereumStakingTitle">Staked Ethereum</span></div>
+        <div><span id="ethereumStakedAmount"></span></div>
+        <div><span class="ethereumStakingTotalRewards">Total rewards <span id="ethereumStakingTotalRewards"></span>
         </div>
       </div>
     </div>
