Add initial manage transactions popup
Needs to be fleshed out  with transaction details and edit/removing functionality.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
     </div>
 
-    <!-- Search Popup modal -->
+    <!-- New Transaction modal -->
     <div id="transaction-modal" class="modal">
       <div class="modal-content">
         <span class="close" id="transaction-modal-close">&times;</span>
@@ -102,6 +102,17 @@
             <input id="transactionCost" type="number" step="any" placeholder="Total cost ($)">
             <button id="addTransactionBtn">Add transaction</button>
           </form>
+
+        </div>
+      </div>
+    </div>
+
+    <!-- Manage Transactions modal -->
+    <div id="manage-transactions-modal" class="modal">
+      <div class="modal-content">
+        <span class="close" id="manage-transactions-modal-close">&times;</span>
+        <h2>Manage <span id="manageTransactionsModalTitle"></span> transactions</h2>
+        <div class="inner-modal-content" id="inner-manage-transactions-modal-content">
 
         </div>
       </div>
