Add daily eth staking rewards

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
       <div id="ethereumStaking">
         <div><span id="ethereumStakingTitle">Staked Ethereum</span></div>
         <div><span id="ethereumStakedAmount"></span></div>
-        <div><span class="ethereumStakingTotalRewards">Total rewards <span id="ethereumStakingTotalRewards"></span>
+        <div>
+          <span class="ethereumStakingTotalRewards">Total rewards <span id="ethereumStakingTotalRewards"></span></span>
+        </div>
+        <div>
+          <span class="ethereumStakingDailyRewards">Daily rewards <span id="ethereumStakingDailyRewards"></span></span>
         </div>
       </div>
     </div>
