--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Table of holdings -->
     <div class="row">
       <div class="assetsTable">
-        <h2 id="assetsTableTitle">My assets</h2>
+        <h2 id="assetsTableTitle">Cryptofolio</h2>
 
         <button id="addCrypto">Add crypto</button>
         <table class="table" id="assetsTable">
@@ -38,7 +38,9 @@
     <div class="row">
       <div class="summary">
         <h3>Total value</h3>
-        <span id="summaryTotalValue">$</span>
+        <span id="summaryTotalValue">
+          <span id="summaryTotalValueCurrency">$</span><span id="summaryTotalValueContent"></span>
+        </span>
         <h3>Total gain</h3>
         <span id="summaryTotalPercentage">%</span>
         <a id="exportDataBtn">Export data</a>
@@ -50,7 +52,12 @@
         <div><span id="ethereumStakingTitle">Staked Ethereum</span></div>
         <div><span id="ethereumStakedAmount"></span></div>
         <div>
-          <span class="ethereumStakingTotalRewards">Total rewards <span id="ethereumStakingTotalRewards"></span></span>
+          <span class="ethereumStakingTotalRewards">Total rewards
+            <span id="ethereumStakingTotalRewards">
+              <span id="ethereumStakingTotalRewardsContent"></span>
+              <span>USD</span>
+            </span>
+          </span>
         </div>
         <div>
           <span class="ethereumStakingDailyRewards">Daily rewards <span id="ethereumStakingDailyRewards"></span></span>
