Add table tooltips onhover + refactor gains calculations
The gains calculation is refactored to now take sell transactions into account

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           <thead>
             <tr>
               <th>Asset</th>
-              <th>Average buy price</th>
-              <th>Amount</th>
-              <th>Total invested</th>
-              <th>Current Value</th>
-              <th>Gain</th>
+              <th title="The average price of all the buys combined">Average buy price</th>
+              <th title="Current amount held">Amount</th>
+              <th title="Total of the buys minus the sells">Net invested</th>
+              <th title="The value at current market rates">Current Value</th>
+              <th title="Current value and average sells compared to average buys (in percentage)">Gain</th>
             </tr>
           </thead>
           <tbody id="assetsTableBody">
