--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@
           <button id="toggleAllMode" class="toggleDateModes" value="all" type="button">All</button>
         </div>
       </span>
-
+      <div id="loader">
+        Calculating with some delay to prevent being rate limited.
+        <div class="loader"></div>
+      </div>
+      <div id="rateLimiting">
+        Too many data calls. Slow down.
+      </div>
       <canvas id="lineChart1"></canvas>
     </div>
 
