--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
     <div id="transaction-modal" class="modal">
       <div class="modal-content">
         <span class="close" id="transaction-modal-close">&times;</span>
-        <div class="inner-modal-content" id="inner-transaction-modal-content">
+        <div class="inner-modal-content">
           <h2>New transaction for <span id="transactionModalTitle"></span></h2>
           <form id="transactionForm">
-            <div class="button" id='toggleTransactionType'>
-              <p class="active" id='buyTransactionBtn'>Buy</p>
-              <p class="" id='sellTransactionBtn'>Sell</p>
+            <div class="button" id="toggleTransactionType">
+              <p class="active" id="buyTransactionBtn">Buy</p>
+              <p class="" id="sellTransactionBtn">Sell</p>
             </div>
             <div>
               <input id="transactionDate" type="date">
@@ -163,15 +163,43 @@
             </thead>
             <tbody id="manageTransactionsTableBody">
             </tbody>
+          </table>
         </div>
       </div>
     </div>
 
+    <!-- Edit Transaction modal -->
+    <div id="edit-transaction-modal" class="modal">
+      <div class="modal-content">
+        <span class="close" id="edit-transaction-modal-close">&times;</span>
+        <div class="inner-modal-content">
+          <h2>Edit <span id="editTransactionModalTitle"></span> transaction</h2>
+          <form id="editTransactionForm">
+            <div class="button" id="editToggleTransactionType">
+              <p class="" id="editBuyTransactionBtn">Buy</p>
+              <p class="" id="editSellTransactionBtn">Sell</p>
+            </div>
+            <div>
+              <input id="editTransactionDate" type="date">
+            </div>
+            <div>
+              <input id="editTransactionAmount" type="number" step="any" placeholder="Amount of coins" min="0">
+            </div>
+            <div>
+              <input id="editTransactionCost" type="number" step="any" placeholder="Total cost ($)" min="0">
+            </div>
+            <button id="editTransactionBtn">Edit transaction</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <script type="module" src="/src/main.ts"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+
+  <script type="module" src="/src/main.ts"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 </body>
 
 </html>
