Fix deleting bugs + use a predefined colorslist

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="chart mainChart lineChart">
       <span>
         <h2 class="totalValueTitle">Total value over time</h2>
-        <div class="toggleDate">
+        <div id="toggleDate" class="toggleDate">
           <button id="toggleDayMode" class="toggleDateModes" value="day" type="button">24H</button>
           <button id="toggleWeekMode" class="toggleDateModes" value="week" type="button">7D</button>
           <button id="toggleMonthMode" class="toggleDateModes active" value="month" type="button">1M</button>
