Hide the linechart until it's loaded + add documentation

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
       <div id="rateLimiting">
         Too many data calls. Slow down.
       </div>
-      <canvas id="lineChart1"></canvas>
+      <div id="lineChart1Parent">
+        <canvas id="lineChart1"></canvas>
+      </div>
     </div>
 
     <div class="row">
