--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>Cryptofolio</title>
   <link rel="stylesheet" href="./src/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+  <script async src="https://analytics.umami.is/script.js"
+    data-website-id="4ad933e8-7c47-46ea-90a1-15cc37a8fc79"></script>
 </head>
 
 <body>
