--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💼</text></svg>">
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💼</text></svg>" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cryptofolio</title>
-  <link rel="stylesheet" href="./src/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-  <script async src="https://analytics.umami.is/script.js"
-    data-website-id="4ad933e8-7c47-46ea-90a1-15cc37a8fc79"></script>
+  <link rel="stylesheet" href="./src/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 </head>
 
 <body>
   <div id="app">
-
     <!-- Table of holdings -->
     <div class="row">
       <div class="assetsTable">
@@ -26,15 +23,18 @@
           <thead>
             <tr>
               <th>Asset</th>
-              <th title="The average price of all the buys combined">Average buy price</th>
+              <th title="The average price of all the buys combined">
+                Average buy price
+              </th>
               <th title="Current amount held">Amount</th>
               <th title="Total of the buys minus the sells">Net invested</th>
               <th title="The value at current market rates">Current Value</th>
-              <th title="Current value and average sells compared to average buys (in percentage)">Gain</th>
+              <th title="Current value and average sells compared to average buys (in percentage)">
+                Gain
+              </th>
             </tr>
           </thead>
-          <tbody id="assetsTableBody">
-          </tbody>
+          <tbody id="assetsTableBody"></tbody>
         </table>
       </div>
     </div>
@@ -47,7 +47,7 @@
         <h3>Total gain</h3>
         <span id="summaryTotalPercentage">%</span>
         <a id="exportDataBtn">Export data</a>
-        <input type="file" accept=".json" id="importDataBtn" placeholder="Import data">
+        <input type="file" accept=".json" id="importDataBtn" placeholder="Import data" />
         <label id="fileInputLabel" for="importDataBtn"><a>Import data</a></label>
       </div>
 
@@ -68,26 +68,32 @@
       </div>
     </div>
 
-
-
     <div class="chart mainChart lineChart">
       <span>
         <h2 class="totalValueTitle">Total value over time</h2>
         <div id="toggleDate" class="toggleDate">
-          <button id="toggleDayMode" class="toggleDateModes" value="day" type="button">24H</button>
-          <button id="toggleWeekMode" class="toggleDateModes" value="week" type="button">7D</button>
-          <button id="toggleMonthMode" class="toggleDateModes active" value="month" type="button">1M</button>
-          <button id="toggleYearMode" class="toggleDateModes" value="year" type="button">1Y</button>
-          <button id="toggleAllMode" class="toggleDateModes" value="all" type="button">All</button>
+          <button id="toggleDayMode" class="toggleDateModes" value="day" type="button">
+            24H
+          </button>
+          <button id="toggleWeekMode" class="toggleDateModes" value="week" type="button">
+            7D
+          </button>
+          <button id="toggleMonthMode" class="toggleDateModes active" value="month" type="button">
+            1M
+          </button>
+          <button id="toggleYearMode" class="toggleDateModes" value="year" type="button">
+            1Y
+          </button>
+          <button id="toggleAllMode" class="toggleDateModes" value="all" type="button">
+            All
+          </button>
         </div>
       </span>
       <div id="loader">
         Calculating with some delay to prevent being rate limited.
         <div class="loader"></div>
       </div>
-      <div id="rateLimiting">
-        Too many data calls. Slow down.
-      </div>
+      <div id="rateLimiting">Too many data calls. Slow down.</div>
       <div id="lineChart1Parent">
         <canvas id="lineChart1"></canvas>
       </div>
@@ -105,19 +111,16 @@
       </div>
     </div>
 
-
-
     <!-- Search Popup modal -->
     <div id="seach-modal" class="modal">
       <div class="modal-content">
         <span class="close" id="search-modal-close">&times;</span>
         <div class="inner-modal-content" id="inner-search-modal-content">
           <form id="searchForm">
-            <input id="crypto-search-input" type="text" placeholder="Search..">
+            <input id="crypto-search-input" type="text" placeholder="Search.." />
             <button><i class="fa fa-search"></i></button>
           </form>
-          <div id="cryptoList">
-          </div>
+          <div id="cryptoList"></div>
         </div>
       </div>
     </div>
@@ -127,25 +130,26 @@
       <div class="modal-content">
         <span class="close" id="transaction-modal-close">&times;</span>
         <div class="inner-modal-content">
-          <h2>New transaction for <span id="transactionModalTitle"></span></h2>
+          <h2>
+            New transaction for <span id="transactionModalTitle"></span>
+          </h2>
           <form id="transactionForm">
             <div class="button" id="toggleTransactionType">
               <p class="active" id="buyTransactionBtn">Buy</p>
               <p class="" id="sellTransactionBtn">Sell</p>
             </div>
             <div>
-              <input id="transactionDate" type="date">
+              <input id="transactionDate" type="date" />
             </div>
             <div class="availableAmountDiv">
               <span id="availableAmount"></span>
-              <input id="transactionAmount" type="number" step="any" placeholder="Amount of coins" min="0">
+              <input id="transactionAmount" type="number" step="any" placeholder="Amount of coins" min="0" />
             </div>
             <div>
-              <input id="transactionCost" type="number" step="any" placeholder="Total cost ($)" min="0">
+              <input id="transactionCost" type="number" step="any" placeholder="Total cost ($)" min="0" />
             </div>
             <button id="addTransactionBtn">Add transaction</button>
           </form>
-
         </div>
       </div>
     </div>
@@ -154,7 +158,9 @@
     <div id="manage-transactions-modal" class="modal">
       <div class="modal-content manage-transactions-modal-content">
         <span class="close" id="manage-transactions-modal-close">&times;</span>
-        <h2>Manage <span id="manageTransactionsModalTitle"></span> transactions</h2>
+        <h2>
+          Manage <span id="manageTransactionsModalTitle"></span> transactions
+        </h2>
         <div class="inner-modal-content" id="inner-manage-transactions-modal-content">
           <table class="table" id="manageTransactionsTable">
             <thead>
@@ -165,8 +171,7 @@
                 <th>Cost</th>
               </tr>
             </thead>
-            <tbody id="manageTransactionsTableBody">
-            </tbody>
+            <tbody id="manageTransactionsTableBody"></tbody>
           </table>
         </div>
       </div>
@@ -177,20 +182,22 @@
       <div class="modal-content">
         <span class="close" id="edit-transaction-modal-close">&times;</span>
         <div class="inner-modal-content">
-          <h2>Edit <span id="editTransactionModalTitle"></span> transaction</h2>
+          <h2>
+            Edit <span id="editTransactionModalTitle"></span> transaction
+          </h2>
           <form id="editTransactionForm">
             <div class="button" id="editToggleTransactionType">
               <p class="" id="editBuyTransactionBtn">Buy</p>
               <p class="" id="editSellTransactionBtn">Sell</p>
             </div>
             <div>
-              <input id="editTransactionDate" type="date">
+              <input id="editTransactionDate" type="date" />
             </div>
             <div>
-              <input id="editTransactionAmount" type="number" step="any" placeholder="Amount of coins" min="0">
+              <input id="editTransactionAmount" type="number" step="any" placeholder="Amount of coins" min="0" />
             </div>
             <div>
-              <input id="editTransactionCost" type="number" step="any" placeholder="Total cost ($)" min="0">
+              <input id="editTransactionCost" type="number" step="any" placeholder="Total cost ($)" min="0" />
             </div>
             <button id="editTransactionBtn">Edit transaction</button>
           </form>
@@ -198,7 +205,6 @@
       </div>
     </div>
   </div>
-
 
   <script type="module" src="/src/main.ts"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
