Update seo meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
   <link rel="shortcut icon" type="image/png" href="./briefcase.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cryptofolio</title>
+
+  <!-- Meta Description -->
+  <meta name="description"
+    content="Track your cryptocurrency portfolio locally with Cryptofolio. Simple, minimal, and easy to use. Import/export your data as JSON and visualize it with pie charts and graphs." />
+
+  <link rel="canonical" href="https://cryptofolio.wolfez.dev/" />
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="Cryptofolio - Minimal Crypto Portfolio Tracker" />
+  <meta property="og:description"
+    content="Track your cryptocurrency portfolio locally with Cryptofolio. Simple, minimal, and easy to use. Import/export your data as JSON and visualize it with pie charts and graphs." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://cryptofolio.wolfez.dev/" />
+  <meta property="og:image" content="./briefcase.png" />
+  <meta property="og:site_name" content="Cryptofolio" />
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Cryptofolio - Minimal Crypto Portfolio Tracker" />
+  <meta name="twitter:description"
+    content="Track your cryptocurrency portfolio locally with Cryptofolio. Simple, minimal, and easy to use. Import/export your data as JSON and visualize it with pie charts and graphs." />
+  <meta name="twitter:image" content="./briefcase.png" />
+
   <link rel="stylesheet" href="./src/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 </head>
