--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     content="Track your cryptocurrency portfolio locally with Cryptofolio. Simple, minimal, and easy to use. Import/export your data as JSON and visualize it with pie charts and graphs." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://cryptofolio.wolfez.dev/" />
+  <meta property="og:logo" content="briefcase.png" />
   <meta property="og:image" content="briefcase.png" />
   <meta property="og:site_name" content="Cryptofolio" />
 
