disable hourly chart since it got removed from free coingecko api :(

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       <span>
         <h2 class="totalValueTitle">Total value over time</h2>
         <div id="toggleDate" class="toggleDate">
-          <button id="toggleDayMode" class="toggleDateModes" value="day" type="button">
+          <!-- <button id="toggleDayMode" class="toggleDateModes" value="day" type="button">
             24H
-          </button>
+          </button> -->
           <button id="toggleWeekMode" class="toggleDateModes" value="week" type="button">
             7D
           </button>
