disable all button since it's also deprecated in the free coingecko api

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
           <button id="toggleYearMode" class="toggleDateModes" value="year" type="button">
             1Y
           </button>
-          <button id="toggleAllMode" class="toggleDateModes" value="all" type="button">
+          <!-- <button id="toggleAllMode" class="toggleDateModes" value="all" type="button">
             All
-          </button>
+          </button> -->
         </div>
       </span>
       <div id="loader">
