--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
         </span>
         <h3>Total gain</h3>
         <span id="summaryTotalPercentage">%</span>
-        <a id="exportDataBtn">Export data</a>
-        <input type="file" accept=".json" id="importDataBtn" placeholder="Import data" />
-        <label id="fileInputLabel" for="importDataBtn"><a>Import data</a></label>
+        <a class="exportDataBtn" id="exportDataBtn">Export data (json)</a>
+        <a class="exportDataBtn" id="exportDataCsvBtn">Export data (csv)</a>
+        <input class="importDataBtn" type="file" accept=".json" id="importDataBtn" placeholder="Import data" />
+        <label class="fileInputLabel" for="importDataBtn"><a>Import data (json)</a></label>
+        <input class="importDataBtn" type="file" accept=".csv" id="importDataCsvBtn" placeholder="Import data" />
+        <label class="fileInputLabel" for="importDataCsvBtn"><a>Import data (csv)</a></label>
       </div>
 
       <div id="ethereumStaking">
