--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
         </div>
       </div>
     </div>
+    <footer>
+        <p>
+          A project by
+          <a href="https://wolfez.dev" rel="noopener">wolfez.dev</a>
+        </p>
+    </footer>
   </div>
 
   <script type="module" src="/src/main.ts"></script>
