--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+  <script defer src="https://umami.wolfez.dev/script.js"
+    data-website-id="c08875fb-7cbc-48eb-b3f1-a6eeb3e57773"></script>
 </body>
 
 </html>
