fix row styling

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </table>
       </div>
     </div>
-    <div class="row">
+    <div class="row" style="flex-direction: column;">
       <div class="summary">
         <h3>Total value</h3>
         <span id="summaryTotalValue">
