fix the sleeping/rate limiter

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         Calculating with some delay to prevent being rate limited.
         <div class="loader"></div>
       </div>
-      <div id="rateLimiting">Too many data calls. Slow down.</div>
+      <div id="rateLimiting">Too many data calls. Wait a few minutes and continue.</div>
       <div id="lineChart1Parent">
         <canvas id="lineChart1"></canvas>
       </div>
