refactor: use dialog for modals to simplify

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <!-- CSV Instructions Modal -->
-        <div id="csvInstructionsModal" class="modal">
+        <dialog id="csvInstructionsModal" class="modal">
           <div class="modal-content">
             <span id="csv-warning-close" class="close">&times;</span>
             <h3>CSV File Structure</h3>
@@ -108,7 +108,7 @@
               <a id="downloadSampleCsv" href="#" download="sample.csv">Download Sample CSV</a>
             </div>
           </div>
-        </div>
+        </dialog>
       </div>
 
     <div class="chart mainChart lineChart">
@@ -155,7 +155,7 @@
     </div>
 
     <!-- Search Popup modal -->
-    <div id="seach-modal" class="modal">
+    <dialog id="seach-modal" class="modal">
       <div class="modal-content">
         <span class="close" id="search-modal-close">&times;</span>
         <div class="inner-modal-content" id="inner-search-modal-content">
@@ -166,10 +166,10 @@
           <div id="cryptoList"></div>
         </div>
       </div>
-    </div>
+    </dialog>
 
     <!-- New Transaction modal -->
-    <div id="transaction-modal" class="modal">
+    <dialog id="transaction-modal" class="modal">
       <div class="modal-content">
         <span class="close" id="transaction-modal-close">&times;</span>
         <div class="inner-modal-content">
@@ -195,10 +195,10 @@
           </form>
         </div>
       </div>
-    </div>
+    </dialog>
 
     <!-- Manage Transactions modal -->
-    <div id="manage-transactions-modal" class="modal">
+    <dialog id="manage-transactions-modal" class="modal">
       <div class="modal-content manage-transactions-modal-content">
         <span class="close" id="manage-transactions-modal-close">&times;</span>
         <h2>
@@ -218,10 +218,10 @@
           </table>
         </div>
       </div>
-    </div>
+    </dialog>
 
     <!-- Edit Transaction modal -->
-    <div id="edit-transaction-modal" class="modal">
+    <dialog id="edit-transaction-modal" class="modal">
       <div class="modal-content">
         <span class="close" id="edit-transaction-modal-close">&times;</span>
         <div class="inner-modal-content">
@@ -246,7 +246,7 @@
           </form>
         </div>
       </div>
-    </div>
+    </dialog>
     <footer>
       <p>
         A project by
