--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <div class="dropdown">
           <button class="dropbtn" id="importDropdownBtn">Import</button>
           <div class="dropdown-content" id="importDropdown">
-            <input type="file" accept=".json" id="importDataBtn" />
-            <label for="importDataBtn"><a class="importDataBtn">Import data (JSON)</a></label>
+            <input type="file" accept=".json" id="importDataJsonBtn" />
+            <label for="importDataJsonBtn"><a class="importDataBtn">Import data (JSON)</a></label>
             <input type="file" accept=".csv" id="importDataCsvBtn" />
             <label for="importDataCsvBtn"><a class="importDataBtn">Import data (CSV)</a></label>
           </div>
