modularize: extract searchModal

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </div>
 
     <!-- Search Popup modal -->
-    <dialog id="seach-modal" class="modal">
+    <dialog id="search-modal" class="modal">
       <div class="modal-content">
         <span class="close" id="search-modal-close">&times;</span>
         <div class="inner-modal-content" id="inner-search-modal-content">
